--- a/tmux.conf
+++ b/tmux.conf
@@ -7,12 +7,11 @@ set -g @plugin 'valerino/dracula.tmux'
 set-option -sg escape-time 10
 # Quick nal is 256 colors
 set -g default-terminal "screen-256color"
-
 bind r source-file ~/.tmux.conf \; display ".tmux.conf reloaded!"
-
+set -g mouse on
 # Keymap
-bind \ split-window -h -c '#{pane_current_path}'
-bind / split-window -v -c '#{pane_current_path}'
+bind '\' split-window -h -c '#{pane_current_path}'
+bind '/' split-window -v -c '#{pane_current_path}'
 unbind '"'
 unbind %
 
